# pytsv

./: .aspell.en.pws  .gitignore  .myenv  .mypy.ini  .spellcheck-words  .tools.versions  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  TODO.txt  build.py  build_docs.sh  old_setup.py  pyproject.toml  requirements.dev.txt  requirements.thawed.txt  requirements.txt  rsbuild.toml  rsconstruct.toml  setup.cfg  setup.py
.github/workflows/: build.yml
config/: helpers.py  project.py  python.py  version.py
data/: bad.tsv  cluster.tsv  good.tsv  graph.tsv
data/legal_tsv_files/: weird_characters.tsv
docs/: .buildinfo  404.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pytsv.endpoints.html  pytsv.html  pytsv.scripts.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pytsv.doctree  pytsv.scripts.doctree
docs/_modules/: index.html
docs/_modules/pytconf/: config.html  param.html
docs/_modules/pytsv/: configs.html  core.html  main.html  pytsv.html
docs/_modules/pytsv/endpoints/: group_default.html  main.html
docs/_modules/pytsv/scripts/: check.html  join.html  split_by_columns_parallel.html
docs/_sources/: index.rst.txt  modules.rst.txt  pytsv.endpoints.rst.txt  pytsv.rst.txt  pytsv.scripts.rst.txt
docs/_static/: documentation_options.js  searchtools.js
legal_tsv_files/: simple.tsv  weird_characters.tsv
pytsv/: __init__.py  configs.py  core.py  main.py  pytsv.py  static.py  version.py
pytsv/endpoints/: group_default.py  main.py
pytsv/scripts/: aggregate.py  check.py  check_columns_unique.py  clean_by_field_num.py  csv_to_tsv.py  drop_duplicates_by_columns.py  fix_columns.py  histogram_by_column.py  join.py  lc.py  majority.py  multiply.py  read.py  remove_quotes.py  sample_by_column.py  sample_by_column_pandas.py  sample_by_two_columns.py  split_by_columns.py  split_by_columns_parallel.py  sum.py  test.py  tree.py  version.py
scripts/: install_from_pypi.sh
sphinx/: conf.py  index.rst  pytsv.rst  pytsv.scripts.rst
src/pytimer/: pytimer.py
src/pytsv/: __init__.pyi  aggregate.py  check.py  configs.py  core.py  csv_to_tsv.py  cut.py  main.py  pytsv.py  pytsv.pyi  pytsv_aggregate.py  pytsv_check.py  pytsv_histogram_from_tsv.py  pytsv_utils.py  split_by_columns.py  static.py
src/pytsv/scripts/: __init__.pyi  aggregate.py  aggregate.pyi  check.py  csv_to_tsv.py  csv_to_tsv.pyi  cut.py  cut.pyi  drop_duplicates_by_columns.py  drop_duplicates_by_columns.pyi  fix_columns.py  fix_columns.pyi  fix_field.py  histogram.py  histogram_by_column.py  histogram_by_column.pyi  lc.py  lc.pyi  sample_by_column.py  sample_by_column.pyi  split_by_columns.py  split_by_columns_parallel.py  tsv_to_cst.py  tsv_to_csv.py  tsv_to_csv.pyi
templates/: README.rst.mako  old_setup.py.mako  pyproject.toml.mako  requirements.txt.mako  setup.py.mako
templates/.github/workflows/: build.yml.mako
tests/unit_tests/: test_all.py
